tdf#168567: Fix import of SDTs with empty content

regression from commit 7c4dba1deffd81f647a4a3be7a79f68f3bf9f1

SDTs(content controls) with empty paragraph content are not properly
imported.

Change-Id: I340a060f03b419b3352fad2a8fb5ac3af043be54
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192466
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 72a326b2899115860a87cfa55b82f745a76128da)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192952
Tested-by: Jenkins